parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Definitions
Rule 1     Definitions -> ExtendedAttributeList Definition Definitions
Rule 2     Definitions -> <empty>
Rule 3     Definition -> CallbackOrInterface
Rule 4     Definition -> Partial
Rule 5     Definition -> Dictionary
Rule 6     Definition -> Exception
Rule 7     Definition -> Enum
Rule 8     Definition -> Typedef
Rule 9     Definition -> ImplementsStatement
Rule 10    Definition -> error ;
Rule 11    CallbackOrInterface -> CALLBACK CallbackRestOrInterface
Rule 12    CallbackOrInterface -> Interface
Rule 13    ConstValue -> BooleanLiteral
Rule 14    ConstValue -> FloatLiteral
Rule 15    ConstValue -> IntegerLiteral
Rule 16    ConstValue -> StringLiteral
Rule 17    ConstValue -> null
Rule 18    CallbackRestOrInterface -> CallbackRest
Rule 19    CallbackRestOrInterface -> Interface
Rule 20    Interface -> INTERFACE identifier Inheritance { InterfaceMembers } ;
Rule 21    Interface -> INTERFACE identifier Inheritance { error
Rule 22    IntegerLiteral -> integer
Rule 23    Partial -> PARTIAL PartialDefinition
Rule 24    StringLiteral -> string
Rule 25    Partial -> PARTIAL error
Rule 26    ExceptionMember -> Const
Rule 27    ExceptionMember -> ExceptionField
Rule 28    ExceptionMember -> Attribute
Rule 29    ExceptionMember -> ExceptionOperation
Rule 30    PartialDefinition -> PartialDictionary
Rule 31    PartialDefinition -> PartialInterface
Rule 32    PartialInterface -> INTERFACE identifier { InterfaceMembers } ;
Rule 33    Attribute -> ReadOnly ATTRIBUTE Type identifier ;
Rule 34    InterfaceMembers -> ExtendedAttributeList InterfaceMember InterfaceMembers
Rule 35    InterfaceMembers -> <empty>
Rule 36    ExceptionOperation -> Type identifier ( ) ;
Rule 37    InterfaceMembers -> error
Rule 38    InterfaceMember -> Const
Rule 39    InterfaceMember -> Operation
Rule 40    InterfaceMember -> Serializer
Rule 41    InterfaceMember -> Stringifier
Rule 42    InterfaceMember -> StaticMember
Rule 43    InterfaceMember -> Iterable
Rule 44    InterfaceMember -> ReadonlyMember
Rule 45    InterfaceMember -> ReadWriteAttribute
Rule 46    InterfaceMember -> ReadWriteMaplike
Rule 47    InterfaceMember -> ReadWriteSetlike
Rule 48    ExtendedAttributeList -> [ ExtendedAttribute ExtendedAttributes ]
Rule 49    ExtendedAttributeList -> [ ]
Rule 50    ExtendedAttributeList -> <empty>
Rule 51    ExtendedAttributeList -> [ ExtendedAttribute , error
Rule 52    Dictionary -> DICTIONARY identifier Inheritance { DictionaryMembers } ;
Rule 53    Dictionary -> DICTIONARY error ;
Rule 54    ExtendedAttributes -> , ExtendedAttribute ExtendedAttributes
Rule 55    ExtendedAttributes -> ,
Rule 56    ExtendedAttributes -> <empty>
Rule 57    Dictionary -> DICTIONARY identifier Inheritance { error
Rule 58    ExtendedAttribute -> ExtendedAttributeNoArgs
Rule 59    ExtendedAttribute -> ExtendedAttributeArgList
Rule 60    ExtendedAttribute -> ExtendedAttributeIdent
Rule 61    ExtendedAttribute -> ExtendedAttributeIdentList
Rule 62    ExtendedAttribute -> ExtendedAttributeNamedArgList
Rule 63    ExtendedAttribute -> ExtendedAttributeStringLiteral
Rule 64    ExtendedAttribute -> ExtendedAttributeStringLiteralList
Rule 65    DictionaryMembers -> ExtendedAttributeList DictionaryMember DictionaryMembers
Rule 66    DictionaryMembers -> <empty>
Rule 67    DictionaryMember -> Required Type identifier Default ;
Rule 68    UnionType -> ( UnionMemberType OR UnionMemberType UnionMemberTypes )
Rule 69    Required -> REQUIRED
Rule 70    Required -> <empty>
Rule 71    UnionMemberType -> NonAnyType
Rule 72    UnionMemberType -> UnionType TypeSuffix
Rule 73    UnionMemberType -> ANY [ ] TypeSuffix
Rule 74    PartialDictionary -> DICTIONARY identifier { DictionaryMembers } ;
Rule 75    PartialDictionary -> DICTIONARY error ;
Rule 76    UnionMemberTypes -> OR UnionMemberType UnionMemberTypes
Rule 77    UnionMemberTypes -> <empty>
Rule 78    Default -> = DefaultValue
Rule 79    Default -> <empty>
Rule 80    TypeSuffix -> [ ] TypeSuffix
Rule 81    TypeSuffix -> ? TypeSuffixStartingWithArray
Rule 82    TypeSuffix -> <empty>
Rule 83    DefaultValue -> ConstValue
Rule 84    DefaultValue -> string
Rule 85    DefaultValue -> [ ]
Rule 86    ExtendedAttributeStringLiteral -> identifier = StringLiteral
Rule 87    Exception -> EXCEPTION identifier Inheritance { ExceptionMembers } ;
Rule 88    ExceptionMembers -> ExtendedAttributeList ExceptionMember ExceptionMembers
Rule 89    ExceptionMembers -> <empty>
Rule 90    ExtendedAttributeStringLiteralList -> identifier = ( StringLiteralList )
Rule 91    StringLiteralList -> StringLiteral , StringLiteralList
Rule 92    StringLiteralList -> StringLiteral
Rule 93    ExceptionMembers -> error
Rule 94    Inheritance -> : identifier
Rule 95    Inheritance -> <empty>
Rule 96    Enum -> ENUM identifier { EnumValueList } ;
Rule 97    Enum -> ENUM error ;
Rule 98    EnumValueList -> ExtendedAttributeList string EnumValueListComma
Rule 99    EnumValueListComma -> , EnumValueListString
Rule 100   EnumValueListComma -> <empty>
Rule 101   EnumValueListString -> ExtendedAttributeList string EnumValueListComma
Rule 102   EnumValueListString -> <empty>
Rule 103   CallbackRest -> identifier = ReturnType ( ArgumentList ) ;
Rule 104   Typedef -> TYPEDEF ExtendedAttributeListNoComments Type identifier ;
Rule 105   Typedef -> TYPEDEF error ;
Rule 106   ImplementsStatement -> identifier IMPLEMENTS identifier ;
Rule 107   Const -> CONST ConstType identifier = ConstValue ;
Rule 108   null -> NULL
Rule 109   BooleanLiteral -> TRUE
Rule 110   BooleanLiteral -> FALSE
Rule 111   FloatLiteral -> float
Rule 112   FloatLiteral -> - INFINITY
Rule 113   FloatLiteral -> INFINITY
Rule 114   FloatLiteral -> NAN
Rule 115   Serializer -> SERIALIZER SerializerRest
Rule 116   SerializerRest -> ReturnType OperationRest
Rule 117   SerializerRest -> = SerializationPattern ;
Rule 118   SerializerRest -> ;
Rule 119   SerializationPattern -> { SerializationPatternMap }
Rule 120   SerializationPattern -> [ SerializationPatternList ]
Rule 121   SerializationPattern -> identifier
Rule 122   SerializationPatternMap -> GETTER
Rule 123   SerializationPatternMap -> ATTRIBUTE
Rule 124   SerializationPatternMap -> INHERIT , ATTRIBUTE
Rule 125   SerializationPatternMap -> INHERIT Identifiers
Rule 126   SerializationPatternMap -> identifier Identifiers
Rule 127   SerializationPatternMap -> <empty>
Rule 128   SerializationPatternList -> GETTER
Rule 129   SerializationPatternList -> identifier Identifiers
Rule 130   SerializationPatternList -> <empty>
Rule 131   Stringifier -> STRINGIFIER StringifierRest
Rule 132   StringifierRest -> AttributeRest
Rule 133   StringifierRest -> ReturnType OperationRest
Rule 134   StringifierRest -> ;
Rule 135   StaticMember -> STATIC StaticMemberRest
Rule 136   StaticMemberRest -> ReadOnly AttributeRest
Rule 137   StaticMemberRest -> ReturnType OperationRest
Rule 138   ReadonlyMember -> READONLY ReadonlyMemberRest
Rule 139   ReadonlyMemberRest -> AttributeRest
Rule 140   ReadonlyMemberRest -> MaplikeRest
Rule 141   ReadonlyMemberRest -> SetlikeRest
Rule 142   ReadWriteAttribute -> INHERIT ReadOnly AttributeRest
Rule 143   ReadWriteAttribute -> AttributeRest
Rule 144   AttributeRest -> ATTRIBUTE Type AttributeName ;
Rule 145   AttributeName -> AttributeNameKeyword
Rule 146   AttributeName -> identifier
Rule 147   AttributeNameKeyword -> REQUIRED
Rule 148   ReadOnly -> READONLY
Rule 149   ReadOnly -> <empty>
Rule 150   Operation -> ReturnType OperationRest
Rule 151   Operation -> SpecialOperation
Rule 152   SpecialOperation -> Special Specials ReturnType OperationRest
Rule 153   Specials -> Special Specials
Rule 154   Specials -> <empty>
Rule 155   Special -> GETTER
Rule 156   Special -> SETTER
Rule 157   Special -> CREATOR
Rule 158   Special -> DELETER
Rule 159   Special -> LEGACYCALLER
Rule 160   OperationRest -> OptionalIdentifier ( ArgumentList ) ;
Rule 161   OptionalIdentifier -> identifier
Rule 162   OptionalIdentifier -> <empty>
Rule 163   ArgumentList -> Argument Arguments
Rule 164   ArgumentList -> <empty>
Rule 165   ArgumentList -> error
Rule 166   Arguments -> , Argument Arguments
Rule 167   Arguments -> <empty>
Rule 168   Arguments -> , error
Rule 169   Argument -> ExtendedAttributeList OptionalOrRequiredArgument
Rule 170   OptionalOrRequiredArgument -> OPTIONAL Type ArgumentName Default
Rule 171   OptionalOrRequiredArgument -> Type Ellipsis ArgumentName
Rule 172   ArgumentName -> ArgumentNameKeyword
Rule 173   ArgumentName -> identifier
Rule 174   Ellipsis -> ELLIPSIS
Rule 175   Ellipsis -> <empty>
Rule 176   ExceptionField -> Type identifier ;
Rule 177   ExceptionField -> error
Rule 178   Iterable -> ITERABLE < Type OptionalType > ;
Rule 179   Iterable -> LEGACYITERABLE < Type > ;
Rule 180   OptionalType -> , Type
Rule 181   OptionalType -> <empty>
Rule 182   ReadWriteMaplike -> MaplikeRest
Rule 183   ReadWriteSetlike -> SetlikeRest
Rule 184   MaplikeRest -> MAPLIKE < Type , Type > ;
Rule 185   SetlikeRest -> SETLIKE < Type > ;
Rule 186   ExtendedAttributeListNoComments -> [ ExtendedAttribute ExtendedAttributes ]
Rule 187   ExtendedAttributeListNoComments -> <empty>
Rule 188   ArgumentNameKeyword -> ATTRIBUTE
Rule 189   ArgumentNameKeyword -> CALLBACK
Rule 190   ArgumentNameKeyword -> CONST
Rule 191   ArgumentNameKeyword -> CREATOR
Rule 192   ArgumentNameKeyword -> DELETER
Rule 193   ArgumentNameKeyword -> DICTIONARY
Rule 194   ArgumentNameKeyword -> ENUM
Rule 195   ArgumentNameKeyword -> EXCEPTION
Rule 196   ArgumentNameKeyword -> GETTER
Rule 197   ArgumentNameKeyword -> IMPLEMENTS
Rule 198   ArgumentNameKeyword -> INHERIT
Rule 199   ArgumentNameKeyword -> LEGACYCALLER
Rule 200   ArgumentNameKeyword -> PARTIAL
Rule 201   ArgumentNameKeyword -> SERIALIZER
Rule 202   ArgumentNameKeyword -> SETTER
Rule 203   ArgumentNameKeyword -> STATIC
Rule 204   ArgumentNameKeyword -> STRINGIFIER
Rule 205   ArgumentNameKeyword -> TYPEDEF
Rule 206   ArgumentNameKeyword -> UNRESTRICTED
Rule 207   Type -> SingleType
Rule 208   Type -> UnionType TypeSuffix
Rule 209   SingleType -> NonAnyType
Rule 210   SingleType -> ANY TypeSuffixStartingWithArray
Rule 211   NonAnyType -> PrimitiveType TypeSuffix
Rule 212   NonAnyType -> PromiseType Null
Rule 213   NonAnyType -> identifier TypeSuffix
Rule 214   NonAnyType -> SEQUENCE < Type > Null
Rule 215   ConstType -> PrimitiveType Null
Rule 216   ConstType -> identifier Null
Rule 217   PrimitiveType -> UnsignedIntegerType
Rule 218   PrimitiveType -> UnrestrictedFloatType
Rule 219   PrimitiveType -> BOOLEAN
Rule 220   PrimitiveType -> BYTE
Rule 221   PrimitiveType -> OCTET
Rule 222   PrimitiveType -> BYTESTRING
Rule 223   PrimitiveType -> DOMSTRING
Rule 224   PrimitiveType -> OBJECT
Rule 225   PrimitiveType -> DATE
Rule 226   PrimitiveType -> REGEXP
Rule 227   UnrestrictedFloatType -> UNRESTRICTED FloatType
Rule 228   UnrestrictedFloatType -> FloatType
Rule 229   FloatType -> FLOAT
Rule 230   FloatType -> DOUBLE
Rule 231   UnsignedIntegerType -> UNSIGNED IntegerType
Rule 232   UnsignedIntegerType -> IntegerType
Rule 233   IntegerType -> SHORT
Rule 234   IntegerType -> LONG OptionalLong
Rule 235   OptionalLong -> LONG
Rule 236   OptionalLong -> <empty>
Rule 237   PromiseType -> PROMISE < ReturnType >
Rule 238   PromiseType -> PROMISE
Rule 239   TypeSuffixStartingWithArray -> [ ] TypeSuffix
Rule 240   TypeSuffixStartingWithArray -> <empty>
Rule 241   Null -> ?
Rule 242   Null -> <empty>
Rule 243   ReturnType -> Type
Rule 244   ReturnType -> VOID
Rule 245   IdentifierList -> identifier Identifiers
Rule 246   Identifiers -> , identifier Identifiers
Rule 247   Identifiers -> <empty>
Rule 248   ExtendedAttributeNoArgs -> identifier
Rule 249   ExtendedAttributeArgList -> identifier ( ArgumentList )
Rule 250   ExtendedAttributeIdent -> identifier = identifier
Rule 251   ExtendedAttributeIdentList -> identifier = ( IdentifierList )
Rule 252   ExtendedAttributeNamedArgList -> identifier = identifier ( ArgumentList )

Terminals, with rules where they appear

(                    : 36 68 90 103 160 249 251 252
)                    : 36 68 90 103 160 249 251 252
,                    : 51 54 55 91 99 124 166 168 180 184 246
-                    : 112
:                    : 94
;                    : 10 20 32 33 36 52 53 67 74 75 87 96 97 103 104 105 106 107 117 118 134 144 160 176 178 179 184 185
<                    : 178 179 184 185 214 237
=                    : 78 86 90 103 107 117 250 251 252
>                    : 178 179 184 185 214 237
?                    : 81 241
ANY                  : 73 210
ATTRIBUTE            : 33 123 124 144 188
BOOLEAN              : 219
BYTE                 : 220
BYTESTRING           : 222
CALLBACK             : 11 189
CONST                : 107 190
CREATOR              : 157 191
DATE                 : 225
DELETER              : 158 192
DICTIONARY           : 52 53 57 74 75 193
DOMSTRING            : 223
DOUBLE               : 230
ELLIPSIS             : 174
ENUM                 : 96 97 194
EXCEPTION            : 87 195
FALSE                : 110
FLOAT                : 229
GETTER               : 122 128 155 196
IMPLEMENTS           : 106 197
INFINITY             : 112 113
INHERIT              : 124 125 142 198
INTERFACE            : 20 21 32
ITERABLE             : 178
LEGACYCALLER         : 159 199
LEGACYITERABLE       : 179
LONG                 : 234 235
MAPLIKE              : 184
NAN                  : 114
NULL                 : 108
OBJECT               : 224
OCTET                : 221
OPTIONAL             : 170
OR                   : 68 76
PARTIAL              : 23 25 200
PROMISE              : 237 238
READONLY             : 138 148
REGEXP               : 226
REQUIRED             : 69 147
SEQUENCE             : 214
SERIALIZER           : 115 201
SETLIKE              : 185
SETTER               : 156 202
SHORT                : 233
STATIC               : 135 203
STRINGIFIER          : 131 204
TRUE                 : 109
TYPEDEF              : 104 105 205
UNRESTRICTED         : 206 227
UNSIGNED             : 231
VOID                 : 244
[                    : 48 49 51 73 80 85 120 186 239
]                    : 48 49 73 80 85 120 186 239
error                : 10 21 25 37 51 53 57 75 93 97 105 165 168 177
float                : 111
identifier           : 20 21 32 33 36 52 57 67 74 86 87 90 94 96 103 104 106 106 107 121 126 129 146 161 173 176 213 216 245 246 248 249 250 250 251 252 252
integer              : 22
string               : 24 84 98 101
{                    : 20 21 32 52 57 74 87 96 119
}                    : 20 32 52 74 87 96 119

Nonterminals, with rules where they appear

Argument             : 163 166
ArgumentList         : 103 160 249 252
ArgumentName         : 170 171
ArgumentNameKeyword  : 172
Arguments            : 163 166
Attribute            : 28
AttributeName        : 144
AttributeNameKeyword : 145
AttributeRest        : 132 136 139 142 143
BooleanLiteral       : 13
CallbackOrInterface  : 3
CallbackRest         : 18
CallbackRestOrInterface : 11
Const                : 26 38
ConstType            : 107
ConstValue           : 83 107
Default              : 67 170
DefaultValue         : 78
Definition           : 1
Definitions          : 1 0
Dictionary           : 5
DictionaryMember     : 65
DictionaryMembers    : 52 65 74
Ellipsis             : 171
Enum                 : 7
EnumValueList        : 96
EnumValueListComma   : 98 101
EnumValueListString  : 99
Exception            : 6
ExceptionField       : 27
ExceptionMember      : 88
ExceptionMembers     : 87 88
ExceptionOperation   : 29
ExtendedAttribute    : 48 51 54 186
ExtendedAttributeArgList : 59
ExtendedAttributeIdent : 60
ExtendedAttributeIdentList : 61
ExtendedAttributeList : 1 34 65 88 98 101 169
ExtendedAttributeListNoComments : 104
ExtendedAttributeNamedArgList : 62
ExtendedAttributeNoArgs : 58
ExtendedAttributeStringLiteral : 63
ExtendedAttributeStringLiteralList : 64
ExtendedAttributes   : 48 54 186
FloatLiteral         : 14
FloatType            : 227 228
IdentifierList       : 251
Identifiers          : 125 126 129 245 246
ImplementsStatement  : 9
Inheritance          : 20 21 52 57 87
IntegerLiteral       : 15
IntegerType          : 231 232
Interface            : 12 19
InterfaceMember      : 34
InterfaceMembers     : 20 32 34
Iterable             : 43
MaplikeRest          : 140 182
NonAnyType           : 71 209
Null                 : 212 214 215 216
Operation            : 39
OperationRest        : 116 133 137 150 152
OptionalIdentifier   : 160
OptionalLong         : 234
OptionalOrRequiredArgument : 169
OptionalType         : 178
Partial              : 4
PartialDefinition    : 23
PartialDictionary    : 30
PartialInterface     : 31
PrimitiveType        : 211 215
PromiseType          : 212
ReadOnly             : 33 136 142
ReadWriteAttribute   : 45
ReadWriteMaplike     : 46
ReadWriteSetlike     : 47
ReadonlyMember       : 44
ReadonlyMemberRest   : 138
Required             : 67
ReturnType           : 103 116 133 137 150 152 237
SerializationPattern : 117
SerializationPatternList : 120
SerializationPatternMap : 119
Serializer           : 40
SerializerRest       : 115
SetlikeRest          : 141 183
SingleType           : 207
Special              : 152 153
SpecialOperation     : 151
Specials             : 152 153
StaticMember         : 42
StaticMemberRest     : 135
StringLiteral        : 16 86 91 92
StringLiteralList    : 90 91
Stringifier          : 41
StringifierRest      : 131
Type                 : 33 36 67 104 144 170 171 176 178 179 180 184 184 185 214 243
TypeSuffix           : 72 73 80 208 211 213 239
TypeSuffixStartingWithArray : 81 210
Typedef              : 8
UnionMemberType      : 68 68 76
UnionMemberTypes     : 68 76
UnionType            : 72 208
UnrestrictedFloatType : 218
UnsignedIntegerType  : 217
null                 : 17

Parsing method: SLR

state 0

    (0) S' -> . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (48) ExtendedAttributeList -> . [ ExtendedAttribute ExtendedAttributes ]
    (49) ExtendedAttributeList -> . [ ]
    (50) ExtendedAttributeList -> .
    (51) ExtendedAttributeList -> . [ ExtendedAttribute , error

    $end            reduce using rule 2 (Definitions -> .)
    [               shift and go to state 3
    CALLBACK        reduce using rule 50 (ExtendedAttributeList -> .)
    PARTIAL         reduce using rule 50 (ExtendedAttributeList -> .)
    DICTIONARY      reduce using rule 50 (ExtendedAttributeList -> .)
    ENUM            reduce using rule 50 (ExtendedAttributeList -> .)
    TYPEDEF         reduce using rule 50 (ExtendedAttributeList -> .)
    identifier      reduce using rule 50 (ExtendedAttributeList -> .)
    error           reduce using rule 50 (ExtendedAttributeList -> .)
    INTERFACE       reduce using rule 50 (ExtendedAttributeList -> .)
    EXCEPTION       reduce using rule 50 (ExtendedAttributeList -> .)
    CONST           reduce using rule 50 (ExtendedAttributeList -> .)
    STRINGIFIER     reduce using rule 50 (ExtendedAttributeList -> .)
    STATIC          reduce using rule 50 (ExtendedAttributeList -> .)
    ITERABLE        reduce using rule 50 (ExtendedAttributeList -> .)
    LEGACYITERABLE  reduce using rule 50 (ExtendedAttributeList -> .)
    INHERIT         reduce using rule 50 (ExtendedAttributeList -> .)
    MAPLIKE         reduce using rule 50 (ExtendedAttributeList -> .)
    (               reduce using rule 50 (ExtendedAttributeList -> .)
    VOID            reduce using rule 50 (ExtendedAttributeList -> .)
    GETTER          reduce using rule 50 (ExtendedAttributeList -> .)
    SETTER          reduce using rule 50 (ExtendedAttributeList -> .)
    CREATOR         reduce using rule 50 (ExtendedAttributeList -> .)
    DELETER         reduce using rule 50 (ExtendedAttributeList -> .)
    LEGACYCALLER    reduce using rule 50 (ExtendedAttributeList -> .)
    SERIALIZER      reduce using rule 50 (ExtendedAttributeList -> .)
    READONLY        reduce using rule 50 (ExtendedAttributeList -> .)
    ATTRIBUTE       reduce using rule 50 (ExtendedAttributeList -> .)
    SETLIKE         reduce using rule 50 (ExtendedAttributeList -> .)
    SEQUENCE        reduce using rule 50 (ExtendedAttributeList -> .)
    ANY             reduce using rule 50 (ExtendedAttributeList -> .)
    BOOLEAN         reduce using rule 50 (ExtendedAttributeList -> .)
    BYTE            reduce using rule 50 (ExtendedAttributeList -> .)
    OCTET           reduce using rule 50 (ExtendedAttributeList -> .)
    BYTESTRING      reduce using rule 50 (ExtendedAttributeList -> .)
    DOMSTRING       reduce using rule 50 (ExtendedAttributeList -> .)
    OBJECT          reduce using rule 50 (ExtendedAttributeList -> .)
    DATE            reduce using rule 50 (ExtendedAttributeList -> .)
    REGEXP          reduce using rule 50 (ExtendedAttributeList -> .)
    PROMISE         reduce using rule 50 (ExtendedAttributeList -> .)
    UNSIGNED        reduce using rule 50 (ExtendedAttributeList -> .)
    SHORT           reduce using rule 50 (ExtendedAttributeList -> .)
    LONG            reduce using rule 50 (ExtendedAttributeList -> .)
    UNRESTRICTED    reduce using rule 50 (ExtendedAttributeList -> .)
    FLOAT           reduce using rule 50 (ExtendedAttributeList -> .)
    DOUBLE          reduce using rule 50 (ExtendedAttributeList -> .)
    REQUIRED        reduce using rule 50 (ExtendedAttributeList -> .)
    string          reduce using rule 50 (ExtendedAttributeList -> .)
    OPTIONAL        reduce using rule 50 (ExtendedAttributeList -> .)

    Definitions                    shift and go to state 2
    ExtendedAttributeList          shift and go to state 1

state 1

    (1) Definitions -> ExtendedAttributeList . Definition Definitions
    (3) Definition -> . CallbackOrInterface
    (4) Definition -> . Partial
    (5) Definition -> . Dictionary
    (6) Definition -> . Exception
    (7) Definition -> . Enum
    (8) Definition -> . Typedef
    (9) Definition -> . ImplementsStatement
    (10) Definition -> . error ;
    (11) CallbackOrInterface -> . CALLBACK CallbackRestOrInterface
    (12) CallbackOrInterface -> . Interface
    (23) Partial -> . PARTIAL PartialDefinition
    (25) Partial -> . PARTIAL error
    (52) Dictionary -> . DICTIONARY identifier Inheritance { DictionaryMembers } ;
    (53) Dictionary -> . DICTIONARY error ;
    (57) Dictionary -> . DICTIONARY identifier Inheritance { error
    (87) Exception -> . EXCEPTION identifier Inheritance { ExceptionMembers } ;
    (96) Enum -> . ENUM identifier { EnumValueList } ;
    (97) Enum -> . ENUM error ;
    (104) Typedef -> . TYPEDEF ExtendedAttributeListNoComments Type identifier ;
    (105) Typedef -> . TYPEDEF error ;
    (106) ImplementsStatement -> . identifier IMPLEMENTS identifier ;
    (20) Interface -> . INTERFACE identifier Inheritance { InterfaceMembers } ;
    (21) Interface -> . INTERFACE identifier Inheritance { error

    error           shift and go to state 19
    CALLBACK        shift and go to state 18
    PARTIAL         shift and go to state 16
    DICTIONARY      shift and go to state 11
    EXCEPTION       shift and go to state 13
    ENUM            shift and go to state 12
    TYPEDEF         shift and go to state 15
    identifier      shift and go to state 21
    INTERFACE       shift and go to state 20

    Definition                     shift and go to state 9
    Exception                      shift and go to state 10
    Partial                        shift and go to state 17
    Dictionary                     shift and go to state 6
    CallbackOrInterface            shift and go to state 5
    Enum                           shift and go to state 7
    Typedef                        shift and go to state 4
    Interface                      shift and go to state 8
    ImplementsStatement            shift and go to state 14

state 2

    (0) S' -> Definitions .



state 3

    (48) ExtendedAttributeList -> [ . ExtendedAttribute ExtendedAttributes ]
    (49) ExtendedAttributeList -> [ . ]
    (51) ExtendedAttributeList -> [ . ExtendedAttribute , error
    (58) ExtendedAttribute -> . ExtendedAttributeNoArgs
    (59) ExtendedAttribute -> . ExtendedAttributeArgList
    (60) ExtendedAttribute -> . ExtendedAttributeIdent
    (61) ExtendedAttribute -> . ExtendedAttributeIdentList
    (62) ExtendedAttribute -> . ExtendedAttributeNamedArgList
    (63) ExtendedAttribute -> . ExtendedAttributeStringLiteral
    (64) ExtendedAttribute -> . ExtendedAttributeStringLiteralList
    (248) ExtendedAttributeNoArgs -> . identifier
    (249) ExtendedAttributeArgList -> . identifier ( ArgumentList )
    (250) ExtendedAttributeIdent -> . identifier = identifier
    (251) ExtendedAttributeIdentList -> . identifier = ( IdentifierList )
    (252) ExtendedAttributeNamedArgList -> . identifier = identifier ( ArgumentList )
    (86) ExtendedAttributeStringLiteral -> . identifier = StringLiteral
    (90) ExtendedAttributeStringLiteralList -> . identifier = ( StringLiteralList )

    ]               shift and go to state 31
    identifier      shift and go to state 30

    ExtendedAttribute              shift and go to state 23
    ExtendedAttributeStringLiteral shift and go to state 24
    ExtendedAttributeNamedArgList  shift and go to state 22
    ExtendedAttributeArgList       shift and go to state 26
    ExtendedAttributeIdentList     shift and go to state 27
    ExtendedAttributeIdent         shift and go to state 25
    ExtendedAttributeNoArgs        shift and go to state 28
    ExtendedAttributeStringLiteralList shift and go to state 29

state 4

    (8) Definition -> Typedef .

    [               reduce using rule 8 (Definition -> Typedef .)
    CALLBACK        reduce using rule 8 (Definition -> Typedef .)
    PARTIAL         reduce using rule 8 (Definition -> Typedef .)
    DICTIONARY      reduce using rule 8 (Definition -> Typedef .)
    ENUM            reduce using rule 8 (Definition -> Typedef .)
    TYPEDEF         reduce using rule 8 (Definition -> Typedef .)
    identifier      reduce using rule 8 (Definition -> Typedef .)
    error           reduce using rule 8 (Definition -> Typedef .)
    INTERFACE       reduce using rule 8 (Definition -> Typedef .)
    EXCEPTION       reduce using rule 8 (Definition -> Typedef .)
    $end            reduce using rule 8 (Definition -> Typedef .)


state 5

    (3) Definition -> CallbackOrInterface .

    [               reduce using rule 3 (Definition -> CallbackOrInterface .)
    CALLBACK        reduce using rule 3 (Definition -> CallbackOrInterface .)
    PARTIAL         reduce using rule 3 (Definition -> CallbackOrInterface .)
    DICTIONARY      reduce using rule 3 (Definition -> CallbackOrInterface .)
    ENUM            reduce using rule 3 (Definition -> CallbackOrInterface .)
    TYPEDEF         reduce using rule 3 (Definition -> CallbackOrInterface .)
    identifier      reduce using rule 3 (Definition -> CallbackOrInterface .)
    error           reduce using rule 3 (Definition -> CallbackOrInterface .)
    INTERFACE       reduce using rule 3 (Definition -> CallbackOrInterface .)
    EXCEPTION       reduce using rule 3 (Definition -> CallbackOrInterface .)
    $end            reduce using rule 3 (Definition -> CallbackOrInterface .)


state 6

    (5) Definition -> Dictionary .

    [               reduce using rule 5 (Definition -> Dictionary .)
    CALLBACK        reduce using rule 5 (Definition -> Dictionary .)
    PARTIAL         reduce using rule 5 (Definition -> Dictionary .)
    DICTIONARY      reduce using rule 5 (Definition -> Dictionary .)
    ENUM            reduce using rule 5 (Definition -> Dictionary .)
    TYPEDEF         reduce using rule 5 (Definition -> Dictionary .)
    identifier      reduce using rule 5 (Definition -> Dictionary .)
    error           reduce using rule 5 (Definition -> Dictionary .)
    INTERFACE       reduce using rule 5 (Definition -> Dictionary .)
    EXCEPTION       reduce using rule 5 (Definition -> Dictionary .)
    $end            reduce using rule 5 (Definition -> Dictionary .)


state 7

    (7) Definition -> Enum .

    [               reduce using rule 7 (Definition -> Enum .)
    CALLBACK        reduce using rule 7 (Definition -> Enum .)
    PARTIAL         reduce using rule 7 (Definition -> Enum .)
    DICTIONARY      reduce using rule 7 (Definition -> Enum .)
    ENUM            reduce using rule 7 (Definition -> Enum .)
    TYPEDEF         reduce using rule 7 (Definition -> Enum .)
    identifier      reduce using rule 7 (Definition -> Enum .)
    error           reduce using rule 7 (Definition -> Enum .)
    INTERFACE       reduce using rule 7 (Definition -> Enum .)
    EXCEPTION       reduce using rule 7 (Definition -> Enum .)
    $end            reduce using rule 7 (Definition -> Enum .)


state 8

    (12) CallbackOrInterface -> Interface .

    [               reduce using rule 12 (CallbackOrInterface -> Interface .)
    CALLBACK        reduce using rule 12 (CallbackOrInterface -> Interface .)
    PARTIAL         reduce using rule 12 (CallbackOrInterface -> Interface .)
    DICTIONARY      reduce using rule 12 (CallbackOrInterface -> Interface .)
    ENUM            reduce using rule 12 (CallbackOrInterface -> Interface .)
    TYPEDEF         reduce using rule 12 (CallbackOrInterface -> Interface .)
    identifier      reduce using rule 12 (CallbackOrInterface -> Interface .)
    error           reduce using rule 12 (CallbackOrInterface -> Interface .)
    INTERFACE       reduce using rule 12 (CallbackOrInterface -> Interface .)
    EXCEPTION       reduce using rule 12 (CallbackOrInterface -> Interface .)
    $end            reduce using rule 12 (CallbackOrInterface -> Interface .)


state 9

    (1) Definitions -> ExtendedAttributeList Definition . Definitions
    (1) Definitions -> . ExtendedAttributeList Definition Definitions
    (2) Definitions -> .
    (48) ExtendedAttributeList -> . [ ExtendedAttribute ExtendedAttributes ]
    (49) ExtendedAttributeList -> . [ ]
    (50) ExtendedAttributeList -> .
    (51) ExtendedAttributeList -> . [ ExtendedAttribute , error
